fixed content links color in dark mode

--- a/ElectronMainApp/src/main/ui/css/colors-dark-mode.css
+++ b/ElectronMainApp/src/main/ui/css/colors-dark-mode.css
@@ -82,9 +82,6 @@ body {
 .settings-content a {
 	color: #66b574;
 }
-#userfilter .settings-content a {
-	color: #ffffff;
-}
 .option-popup__subtitle,
 .settings-checkboxes__label {
 	color: #cccccc;
@@ -250,12 +247,6 @@ li.active .toggler {
 }
 .settings-form__input {
 	box-shadow: 0 1px 0 0 rgba(216, 216, 216, .7);
-}
-a.settings-actions--update-filters {
-	color: #d8d8d8;
-}
-a.settings-actions--update-filters:hover {
-	color: #bbbbbb;
 }
 .settings-checkboxes__checkbox:checked + .settings-checkboxes__label:before{
 	background-color: #66b574;
